--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@
     margin: 0px;
     padding: 0px;
 }
+
+body {
+    background-image: url(../img/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: monospace;
+    background-color: rgb(170, 35, 35);
+}
+
 nav ul {
     display: flex;
     justify-content: flex-end;
@@ -25,18 +34,18 @@ nav li {
 
 .bloco{
     display: flex;
-    justify-content:space-around;
-    align-items: flex-end;
-    margin-top: 450px;
-    
+
+    height: 450px;
+   
 }
+
 .blocop{
     flex-direction: column-reverse;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(170, 35, 35);
     border: solid 1px rgb(255, 255, 255);
-    width: 500px;
-    padding: 30px;
-    text-align: center;
+    width: 250px;
+    height: 100px;
+    padding: 20px;  
 }
 
 .change:hover {
@@ -48,4 +57,45 @@ nav li {
     color: red;
 }
 
+#carrossel {
+    border: 50px;
+    background-image:url(../img/dentes.jpg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65%;
+    width: 90%;
+    margin: 65px;
+   margin-top: 10px;
+   position: absolute;
+}
+footer{
+    display: flex;
+    justify-content:space-around;
+    align-items: flex-end;
+    margin-top: 10px
+}
 
+footer .img-redes-sociais{
+    align-items: flex-start;
+    flex-direction: column;
+   
+    width:30px;
+    height:30px;
+}
+footer .h2{
+   
+    height: 20px;
+    padding: 10px;
+    color: red;
+}
+footer .footer-font{
+    color: #fff;
+}
+
+.servicos{
+    display: flex;
+    justify-content: space-around;
+    position: ;
+    margin-top: 465px;
+}
